Added hover effect btns

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
 
         <ul class="nav_menu_right">
-          <li><a href="#newsletter_href">Newsletter</a></li>
+          <li><a class="right_item" href="#newsletter_href">Newsletter</a></li>
           <li><a href="/about.html">About</a></li>
           <li class="gold_btn sing_in"><a href="#">Sign in</a></li>
           <li class="gold_btn sing_up"><a href="#">Sign up</a></li>
