Added photos of team fixed typos

--- a/about.html
+++ b/about.html
@@ -70,50 +70,86 @@
             <div class="developer_one developer_items">
               <img
                 class="web_developer_img"
-                src="https://source.unsplash.com/500x500/?human,face"
+                src="/img/JosemariaNriagu.jfif"
                 alt="web_developer_img"
               />
 
-              <div class="person_name">Name</div>
-              <div class="person_position">Web Developer</div>
+              <div class="person_name">Josemaria Nriagu</div>
+              <div class="person_position">Project Lead | Node Backend</div>
               <div class="person_github">
-                <a href="http://github.com/">Github:&nbspPerson name</a>
+                <a href="https://github.com/josenriagu">Github</a>
               </div>
             </div>
             <div class="developer_two developer_items">
               <img
                 class="web_developer_img"
-                src="https://source.unsplash.com/500x500/?human,face"
+                src="/img/rafalkaniewski.jfif"
                 alt="web_developer_img"
               />
-              <div class="person_name">Name</div>
+              <div class="person_name">Rafal Kaniewski</div>
               <div class="person_position">Web Developer</div>
               <div class="person_github">
-                <a href="http://github.com/">Github:&nbspPerson name</a>
+                <a href="http://github.com/roninsecops">Github</a>
               </div>
             </div>
             <div class="developer_three developer_items">
               <img
                 class="web_developer_img"
-                src="https://source.unsplash.com/500x500/?human,face"
+                src="/img/MeganEnnis.png"
                 alt="web_developer_img"
               />
-              <div class="person_name">Name</div>
-              <div class="person_position">Web Developer</div>
+              <div class="person_name">Emma Ennis</div>
+              <div class="person_position">Frontend Framework</div>
               <div class="person_github">
-                <a href="http://github.com/">Github:&nbspPerson name</a>
+                <a href="http://github.com/">Github</a>
               </div>
             </div>
             <div class="developer_four developer_items">
               <img
                 class="web_developer_img"
-                src="https://source.unsplash.com/500x500/?human,face"
+                src="/img/UzomakaAnyanwu.jfif"
                 alt="web_developer_img"
               />
-              <div class="person_name">Name</div>
+              <div class="person_name">Uzomaka Anyanwu</div>
               <div class="person_position">Web Developer</div>
               <div class="person_github">
-                <a href="http://github.com/">Github:&nbspPerson name</a>
+                <a href="http://github.com/">Github</a>
+              </div>
+            </div>
+            <div class="developer_four developer_items">
+              <img
+                class="web_developer_img"
+                src="/img/Amira Adediran.png"
+                alt="web_developer_img"
+              />
+              <div class="person_name">Amira Adediran</div>
+              <div class="person_position">Web Developer</div>
+              <div class="person_github">
+                <a href="http://github.com/">Github</a>
+              </div>
+            </div>
+            <div class="developer_four developer_items">
+              <img
+                class="web_developer_img"
+                src="/img/BlakeLower.jfif"
+                alt="web_developer_img"
+              />
+              <div class="person_name">Blake Lower</div>
+              <div class="person_position">Web Developer</div>
+              <div class="person_github">
+                <a href="http://github.com/">Github</a>
+              </div>
+            </div>
+            <div class="developer_four developer_items">
+              <img
+                class="web_developer_img"
+                src="/img/JordanCovo.png"
+                alt="web_developer_img"
+              />
+              <div class="person_name">Jordan Covo</div>
+              <div class="person_position">Web Developer</div>
+              <div class="person_github">
+                <a href="http://github.com/">Github</a>
               </div>
             </div>
           </div>
