--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <img class="solution_img" src="/img/solution.jpg" alt="solution" />
             <h3 class="h3_style">Solution</h3>
             <p>
-              Let’s make something good together. Team up with me and get the
+              Let’s make something good together. Team up with us and get the
               great-tasting tools you need to breathe life into your business.
             </p>
             <a href="#" class="cta_text">Browse solution →</a>
@@ -92,7 +92,7 @@
 
             <p>
               Bring dynamic flavors and better-for-you ingredients to the table
-              with recipes carefully crafted by Gordon chef.
+              with recipes carefully crafted by Chefs.
             </p>
             <div id="recipies"></div>
             <a href="#" class="cta_text">Explore Recipes →</a>
@@ -146,7 +146,7 @@
       <form class="form_container">
         <div class="news_container">
           <div class="newsletter_container">
-            <h2 class="h2_cont">Sign up for my newsletter</h2>
+            <h2 class="h2_cont">Sign up for newsletter</h2>
             <p>
               Get insider access to news around the innovations, unique cooking
               techniques, culinary concepts, insights, and more.
@@ -175,7 +175,7 @@
       <footer>
         <div class="footer_bar">
           <ul class="footer_list_left">
-            <li><a href="#">© Chef Gordon Portfolio 2019</a></li>
+            <li><a href="#">© Chefs Portfolios 2019</a></li>
             <li><a href="#"></a></li>
             <li><a href="#"></a></li>
           </ul>
