--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>Chef Gabriel's Portfolio</title>
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <link href="https://fonts.googleapis.com/css?family=Liu+Jian+Mao+Cao&display=swap" rel="stylesheet">
+        <script>
+            alert("Remember! Always eat yummy food!");</script>
     </head>
 
     <body>
@@ -57,7 +59,7 @@
                          </div>
                          
                          <div class="walk-img">
-                             <img src="download-15.jpg" alt="Space walking astronaut">
+                             <img src="download-15.jpg" alt="Rachel Rey">
                          </div>
                    
                        </section>
