Fixed header in chrome browser about page

--- a/about.html
+++ b/about.html
@@ -28,9 +28,7 @@
         </ul>
         <div data-aos="slide-down">
           <a href="/">
-            <div class="logo_txt">
-              <!-- <h1>Chef Gordon</h1> -->
-            </div>
+            <div class="logo_txt"></div>
           </a>
         </div>
         <ul class="nav_menu_right">
@@ -111,24 +109,26 @@
                 alt="web_developer_img"
               />
               <div class="person_name">Uzomaka Anyanwu</div>
-              <div class="person_position">Web Developer</div>
+              <div class="person_position">
+                UI Developer | Frontend Developer
+              </div>
               <div class="person_github">
-                <a href="http://github.com/">Github</a>
+                <a href="https://github.com/Uzoamaka126">Github</a>
               </div>
             </div>
-            <div class="developer_four developer_items">
+            <div class="developer_five developer_items">
               <img
                 class="web_developer_img"
                 src="/img/Amira Adediran.png"
                 alt="web_developer_img"
               />
               <div class="person_name">Amira Adediran</div>
-              <div class="person_position">Web Developer</div>
+              <div class="person_position">Frontend Developer</div>
               <div class="person_github">
                 <a href="http://github.com/">Github</a>
               </div>
             </div>
-            <div class="developer_four developer_items">
+            <div class="developer_six developer_items">
               <img
                 class="web_developer_img"
                 src="/img/BlakeLower.jfif"
@@ -140,7 +140,7 @@
                 <a href="http://github.com/">Github</a>
               </div>
             </div>
-            <div class="developer_four developer_items">
+            <div class="developer_seven developer_items">
               <img
                 class="web_developer_img"
                 src="/img/JordanCovo.png"
