Done with github links

--- a/about.html
+++ b/about.html
@@ -137,7 +137,7 @@
               <div class="person_name">Blake Lower</div>
               <div class="person_position">Web Developer</div>
               <div class="person_github">
-                <a href="http://github.com/">Github</a>
+                <a href="http://github.com/blakelower">Github</a>
               </div>
             </div>
             <div class="developer_seven developer_items">
@@ -149,7 +149,7 @@
               <div class="person_name">Jordan Covo</div>
               <div class="person_position">Web Developer</div>
               <div class="person_github">
-                <a href="http://github.com/">Github</a>
+                <a href="http://github.com/jordanalexander22">Github</a>
               </div>
             </div>
           </div>
