Fixed roles about page

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
               />
 
               <div class="person_name">Josemaria Nriagu</div>
-              <div class="person_position">Project Lead | Node Backend</div>
+              <div class="person_position">Project Lead</div>
               <div class="person_github">
                 <a href="https://github.com/josenriagu">Github</a>
               </div>
@@ -85,7 +85,7 @@
                 alt="web_developer_img"
               />
               <div class="person_name">Rafal Kaniewski</div>
-              <div class="person_position">Web Developer</div>
+              <div class="person_position">Web UI</div>
               <div class="person_github">
                 <a href="http://github.com/roninsecops">Github</a>
               </div>
@@ -97,7 +97,7 @@
                 alt="web_developer_img"
               />
               <div class="person_name">Emma Ennis</div>
-              <div class="person_position">Frontend Framework</div>
+              <div class="person_position">Web Frontend</div>
               <div class="person_github">
                 <a href="http://github.com/">Github</a>
               </div>
@@ -109,9 +109,7 @@
                 alt="web_developer_img"
               />
               <div class="person_name">Uzomaka Anyanwu</div>
-              <div class="person_position">
-                UI Developer | Frontend Developer
-              </div>
+              <div class="person_position">Web Frontend</div>
               <div class="person_github">
                 <a href="https://github.com/Uzoamaka126">Github</a>
               </div>
@@ -123,7 +121,7 @@
                 alt="web_developer_img"
               />
               <div class="person_name">Amira Adediran</div>
-              <div class="person_position">Frontend Developer</div>
+              <div class="person_position">Web Frontend</div>
               <div class="person_github">
                 <a href="http://github.com/">Github</a>
               </div>
@@ -135,7 +133,7 @@
                 alt="web_developer_img"
               />
               <div class="person_name">Blake Lower</div>
-              <div class="person_position">Web Developer</div>
+              <div class="person_position">Web UI</div>
               <div class="person_github">
                 <a href="http://github.com/blakelower">Github</a>
               </div>
@@ -147,7 +145,7 @@
                 alt="web_developer_img"
               />
               <div class="person_name">Jordan Covo</div>
-              <div class="person_position">Web Developer</div>
+              <div class="person_position">Web UI</div>
               <div class="person_github">
                 <a href="http://github.com/jordanalexander22">Github</a>
               </div>
