--- a/index.html
+++ b/index.html
@@ -28,16 +28,15 @@
         </ul>
         <div data-aos="slide-down">
           <a href="/">
-            <div class="logo_txt">
-            </div>
+            <div class="logo_txt"></div>
           </a>
         </div>
 
         <ul class="nav_menu_right">
           <li><a class="right_item" href="#newsletter_href">Newsletter</a></li>
           <li><a href="/about.html">About</a></li>
-          <li class="gold_btn sing_in"><a href="#">Sign in</a></li>
-          <li class="gold_btn sing_up"><a href="#">Sign up</a></li>
+          <li class="gold_btn"><a href="#" class="sing_in">Sign in</a></li>
+          <li class="gold_btn"><a href="#" class="sing_up">Sign up</a></li>
         </ul>
       </div>
       <header>
@@ -163,7 +162,7 @@
                 name="l_name"
                 required
               />
-              <input type="text" placeholder="E-mail" name="mail" required />
+              <input type="text" placeholder="E-mail*" name="mail" required />
             </div>
             <button type="button" class="sub_btn" onclick="alert('Thank you!')">
               Sign up
