started about page

--- a/html/index.html
+++ b/html/index.html
@@ -9,9 +9,10 @@
     <body>
             <div class="topnav">
                     <a class="active" href="#home">Home</a>
-                    <a href="#about">About Me</a>
+                    <a href="about.html">About</a>
                     <a href="#blog">Blog</a>
                     <a href="#contact">Contact</a>
+                    <a href="#signin">Sign In</a>
                     <img class= "cookpic" src="/images/smallchef.jpg" alt="logo">
             </div>        
             <div class= "middlepageText">
