--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="navigation">
         <ul class="nav_menu_left">
           <li><a href="/#recipies">Recipies</a></li>
-          <li><a href="#solution_scroll">SSolution</a></li>
+          <li><a href="#solution_scroll">Solution</a></li>
           <li><a href="#fresh_scroll">Fresh Ideas</a></li>
         </ul>
         <div data-aos="slide-down">
