Removed s char form h1 main

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p>Your browser doesn't support HTML video.</p>
           </video>
           <div class="overlay-desc">
-            <h1>Chefs portfolios</h1>
+            <h1>Chef portfolio</h1>
             <h2>Imagine the delicious opportunities</h2>
             <div class="cta_btn_container">
               <a href="#" class="cta_btn">Learn more</a>
