--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
         <title>Chef Gabriel's Portfolio</title>
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <link href="https://fonts.googleapis.com/css?family=Liu+Jian+Mao+Cao&display=swap" rel="stylesheet">
+        <script>
+function startTime() {
+  var today = new Date();
+  var h = today.getHours();
+  var m = today.getMinutes();
+  var s = today.getSeconds();
+  m = checkTime(m);
+  s = checkTime(s);
+  document.getElementById('txt').innerHTML =
+  h + ":" + m + ":" + s;
+  var t = setTimeout(startTime, 500);
+}
+function checkTime(i) {
+  if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
+  return i;
+}
+</script>
     </head>
-            <body>
+            <body onload="startTime()">
+            <div id="txt"></div>
 
                     <!-- navigation code here -->
                    <div class= "containnav">
@@ -14,7 +32,7 @@
                      <nav>
                        <a href="#">Home</a>
                        <a href="about.html">About</a>
-                       <a href="#">Contact</a>
+                       <a href="#contact">Contact</a>
                        <a href="#">Login</a>
                      </nav>
                    
