Fixed about page img section

--- a/about.html
+++ b/about.html
@@ -81,13 +81,13 @@
             <div class="developer_two developer_items">
               <img
                 class="web_developer_img"
-                src="/img/rafalkaniewski.jfif"
+                src="/img/Amira Adediran.png"
                 alt="web_developer_img"
               />
-              <div class="person_name">Rafal Kaniewski</div>
-              <div class="person_position">Web UI</div>
+              <div class="person_name">Amira Adediran</div>
+              <div class="person_position">Web Frontend</div>
               <div class="person_github">
-                <a href="http://github.com/roninsecops">Github</a>
+                <a href="http://github.com/amxra">Github</a>
               </div>
             </div>
             <div class="developer_three developer_items">
@@ -96,10 +96,10 @@
                 src="/img/MeganEnnis.png"
                 alt="web_developer_img"
               />
-              <div class="person_name">Emma Ennis</div>
+              <div class="person_name">Megan Ennis</div>
               <div class="person_position">Web Frontend</div>
               <div class="person_github">
-                <a href="http://github.com/">Github</a>
+                <a href="http://github.com/Megan0145">Github</a>
               </div>
             </div>
             <div class="developer_four developer_items">
@@ -117,13 +117,13 @@
             <div class="developer_five developer_items">
               <img
                 class="web_developer_img"
-                src="/img/Amira Adediran.png"
+                src="/img/rafalkaniewski.jfif"
                 alt="web_developer_img"
               />
-              <div class="person_name">Amira Adediran</div>
-              <div class="person_position">Web Frontend</div>
+              <div class="person_name">Rafal Kaniewski</div>
+              <div class="person_position">Web UI</div>
               <div class="person_github">
-                <a href="http://github.com/">Github</a>
+                <a href="http://github.com/roninsecops">Github</a>
               </div>
             </div>
             <div class="developer_six developer_items">
