mobile responsive and about

--- a/html/about.html
+++ b/html/about.html
@@ -7,8 +7,36 @@
         <title>Meet the Team</title>
     </head>
     <body>
+            <div class="topnav">
+                    <a class="index.html" href="index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="#blog">Blog</a>
+                    <a href="#contact">Contact</a>
+                    <a href="#signin">Sign In</a>
+                    <img class= "cookpic" src="/images/smallchef.jpg" alt="logo">
+            </div>        
 <div class="topofAbout">
     <h1>Meet The Team</h1>
+    <img class="teampic" src="/images/teamwork.jpg" alt="Team">
+</div>
+
+
+
+<div class="contentofAbout">
+    <div class= "amira"> <h1>Amira</h1>
+    <img src="/images/amira_adediran.png" height="315px"></div>
+    <div class="jordam"><h1>Jordan</h1>
+    <img src ="/images/jordancovo_480.png" height="315px"></div>
+    <div class ="jose"><h1>Josemaria</h1>
+    <img src= "/images/josemarianriagu.jpg" height="315px"></div>
+    <div class ="megan"><h1>Megan</h1>
+    <img src="/images/meganennis.png" height="315px"> </div>
+    <div class="uzo"><h1>Uzomakaanya</h1>
+    <img src="/images/uzomakaanyanwu.jpg" height="315px;"></div>
+    <div class="blake"><h1>Blake</h1>
+    <img src="/images/blakelower.jpg" width="315px"></div>
+    <div class="rafael"><h1>Rafal</h1>
+    <img src="/images/rafalkaniewski.jpg" height="315px"></div>
 </div>
     </body>
 </html>
