--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
         </head>
     <body>
             <div class="topnav">
-                    <a class="active" href="#home">Home</a>
+                    <a class="active" href="index.html">Home</a>
                     <a href="about.html">About</a>
                     <a href="#blog">Blog</a>
                     <a href="#contact">Contact</a>
@@ -22,3 +22,4 @@
             </div>           
     </body>
 </html>
+
