--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       src="https://kit.fontawesome.com/a9ab182fa8.js"
       crossorigin="anonymous"
     ></script>
-    <title>Chefs Portfolios</title>
+    <title>Chef Portfolio</title>
   </head>
   <body>
     <div class="container">
