--- a/index.html
+++ b/index.html
@@ -35,8 +35,16 @@
         <ul class="nav_menu_right">
           <li><a class="right_item" href="#newsletter_href">Newsletter</a></li>
           <li><a href="/about.html">About</a></li>
-          <li class="gold_btn"><a href="#" class="sing_in">Sign in</a></li>
-          <li class="gold_btn"><a href="#" class="sing_up">Sign up</a></li>
+          <li class="gold_btn">
+            <a href="https://bwchefportfolio.now.sh/login" class="sing_in"
+              >Sign in</a
+            >
+          </li>
+          <li class="gold_btn">
+            <a href="https://bwchefportfolio.now.sh/signup" class="sing_up"
+              >Sign up</a
+            >
+          </li>
         </ul>
       </div>
       <header>
@@ -49,7 +57,9 @@
             <h1>Chef portfolio</h1>
             <h2>Imagine the delicious opportunities</h2>
             <div class="cta_btn_container">
-              <a href="#" class="cta_btn">Learn more</a>
+              <a href="https://bwchefportfolio.now.sh/signup" class="cta_btn"
+                >Learn more</a
+              >
             </div>
             <div id="fresh_scroll"></div>
             <div id="solution_scroll"></div>
