Linked btns newsletter

--- a/index.html
+++ b/index.html
@@ -174,9 +174,15 @@
               />
               <input type="text" placeholder="E-mail*" name="mail" required />
             </div>
-            <button type="button" class="sub_btn" onclick="alert('Thank you!')">
-              Sign up
-            </button>
+            <a href="https://bwchefportfolio.now.sh/signup">
+              <button
+                type="button"
+                class="sub_btn"
+                onclick="alert('Thank you!')"
+              >
+                Sign up
+              </button>
+            </a>
           </div>
         </div>
       </form>
