Removed Linked btns newsletter

--- a/index.html
+++ b/index.html
@@ -174,15 +174,9 @@
               />
               <input type="text" placeholder="E-mail*" name="mail" required />
             </div>
-            <a href="https://bwchefportfolio.now.sh/signup">
-              <button
-                type="button"
-                class="sub_btn"
-                onclick="alert('Thank you!')"
-              >
-                Sign up
-              </button>
-            </a>
+            <button type="button" class="sub_btn" onclick="alert('Thank you!')">
+              Sign up
+            </button>
           </div>
         </div>
       </form>
