added variable into less folder

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <link href="https://fonts.googleapis.com/css?family=Liu+Jian+Mao+Cao&display=swap" rel="stylesheet">
         <script>
+ "build"= "my-framework build --output public"
 function startTime() {
   var today = new Date();
   var h = today.getHours();
